# storyteller

./: README.md  StoryEngine-modelfile  package.json
.claude/: settings.local.json
src/: app.css
src-tauri/: Cargo.toml  ollama_response.txt  tauri.conf.json
src-tauri/resources/: Modelfile
src-tauri/src/: comfyui_api.rs  commands.rs  commands_old  config.rs  context_compression.rs  custom_assets.rs  llm_parser.rs  main.rs  mask_generator.rs  models.rs  ollama  ollama.rs  services.rs  state.rs  utils.rs
src-tauri/src/commands/: character.rs  chat.rs  chat_with_compression.rs  data.rs  images.rs  master_portrait.rs  mod.rs  orchestrator.rs  pose_loras.rs  scene.rs  story.rs  story_manager.rs
src-tauri/src/image_gen/: masks.rs  mod.rs  portrait.rs  pose_skeletons.rs  sd_webui.rs
src-tauri/src/image_gen/comfyui/: client.rs  commands.rs  mod.rs  pipeline.rs  workflow.rs
src-tauri/src/services/: mod.rs  setup.rs  startup.rs
src-tauri/src/text_gen/: context.rs  mod.rs  orchestrator.rs  parser.rs  prompts.rs
src-tauri/workflows/: storyengine_master_portrait.json
src/components/: AddCharacterToSceneModal.svelte  AllCharactersModal.svelte  CharacterModal.svelte  ChatArea.svelte  ConfigPanel.svelte  ContextMenu.svelte  MasterPortraitGenerator.svelte  POVCharacterModal.svelte  SceneModal.svelte  SettingsModal.svelte  Sidebar.svelte  StoryModal.svelte
src/lib/: character-types.ts  context-compression-types.ts  llm-parser-types.ts  orchestrator-types.ts  scene-processor.ts  story-manager-types.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
(+55 files in other folders)
