[package]
name = "ai-storywriter"
version = "0.1.0"
description = "A Tauri application"
authors = ["You"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
base64 = "0.21"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
